--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.14",
     "@clerk/nextjs": "^6.18.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@vapi-ai/web": "^2.2.7",
+    "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
